kubernetes/apps/staging-phx/flux-system/flux/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4-phx.${SECRET_DOMAIN}"
spec:
  ingressClassName: cilium
  rules:
    - host: "flux-receiver-phx.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - "flux-receiver-phx.${SECRET_DOMAIN}"
